--- a/P4M_Notebook2.ipynb
+++ b/P4M_Notebook2.ipynb
@@ -574,17 +574,19 @@
         "id": "u12wdUpqCLJC"
       },
       "source": [
-        "1. Python signals scope using colons and indentation.\n",
+        "###Solutions\n",
         "\n",
-        "2. See below.\n",
+        "1. Python signals scope using colons and indentation."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "myK_9kRIICJo"
+      },
+      "source": [
         "\n",
-        "3. See below.\n",
-        "\n",
-        "4. See below. `s.replace(a,b)` runs through the string `s`, and replaces instances of the substring `a` with `b`.\n",
-        "\n",
-        "5. `%` formats a number as a percent, so a floating point number `f` is multiplied by 100 and then a % sign is added at the end. `E` formats a number in scientific notation, so `f` is written as a number between 1 and 10, multiplied by an appropriate power of 10.\n",
-        "\n",
-        "6. A function might have a non-deterministic output, such as a function that generates a random number between 0 and 1, which would not need any input. Also, if you have a piece of code that is repeated in several places, it might be helpful to define a function to make it more readable."
+        "2. See below."
       ]
     },
     {
@@ -629,6 +631,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6eh7EpTaIFfK"
+      },
+      "source": [
+        "3. See below."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -655,6 +666,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2ivDpmFGIL8W"
+      },
+      "source": [
+        "4. `s.replace(a,b)` runs through the string `s`, and replaces instances of the substring `a` with `b`."
       ]
     },
     {
@@ -691,6 +711,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "53idVklHIP0y"
+      },
+      "source": [
+        "5. `%` formats a number as a percent, so a floating point number `f` is multiplied by 100 and then a % sign is added at the end. `E` formats a number in scientific notation, so `f` is written as a number between 1 and 10, multiplied by an appropriate power of 10."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ltEcNyLqEQGJ",
@@ -714,6 +743,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XVoFJQhqIVJD"
+      },
+      "source": [
+        "6. A function might have a non-deterministic output, such as a function that generates a random number between 0 and 1, which would not need any input. Also, if you have a piece of code that is repeated in several places, it might be helpful to define a function to make it more readable."
       ]
     },
     {
@@ -1090,16 +1128,7 @@
       "source": [
         "###Solutions \n",
         "\n",
-        "1. See below\n",
-        "\n",
-        "2. See below\n",
-        "\n",
-        "3. See below\n",
-        "\n",
-        "4. I know from algebra that a positive integer $n$ can be written as the sum of two squares if and only if every prime equivalent to $3$ mod $4$ appears an even number of times in the prime factorization of $n$.\n",
-        "\n",
-        "5. It appears that you need $n \\approx 1000000$ to get 5 digits of precision on this limit. We can show that $\\gamma(n)$ is a decreasing sequence that is bounded below, so it converges by the monotone sequence theorem.\n",
-        "\n"
+        "1. See below\n"
       ]
     },
     {
@@ -1134,6 +1163,15 @@
           },
           "execution_count": 46
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "brKUIdpTIYt9"
+      },
+      "source": [
+        "2. See below"
       ]
     },
     {
@@ -1183,6 +1221,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ir69e99qIa2f"
+      },
+      "source": [
+        "3. See below"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "BmlaRpr_M96v",
@@ -1215,6 +1262,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DDqIjx6oIdN_"
+      },
+      "source": [
+        "4. I know from algebra that a positive integer $n$ can be written as the sum of two squares if and only if every prime equivalent to $3$ mod $4$ appears an even number of times in the prime factorization of $n$."
       ]
     },
     {
@@ -1266,6 +1322,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JFStjfv9IgEB"
+      },
+      "source": [
+        "5. It appears that you need $n \\approx 1000000$ to get 5 digits of precision on this limit. We can show that $\\gamma(n)$ is a decreasing sequence that is bounded below, so it converges by the monotone sequence theorem.\n"
       ]
     },
     {
@@ -2328,21 +2393,17 @@
       },
       "source": [
         "###Solutions \n",
-        "1. We can improve the `is_prime` function by only checking $n$ for factors between 1 and $\\sqrt{n}$, because if $n$ had a divisor $d$ greater than $\\sqrt{n}$, then `is_prime` would have already found the smaller divisor $n/d$.\n",
-        "\n",
-        "2. It is always possible for the Euclidean algorithm to terminate after a small number of steps. For example, if one of the inputs is a multiple of the other, than the Euclidean algorithm will terminate after just one step, regardless of the actual sizes of the inputs. After testing different values for $a$ and $b$, it appears that the worst case scenario is if $a$ and $b$ are consecutive Fibonacci numbers, and it can probably be proved by induction that if $b < a$ and $b < F_n$, where $F_n$ is the $n$th Fibonacci number, then the Euclidean algorithm terminates after at most $n$ steps.\n",
-        "\n",
-        "3. If we consider the natural numbers partially ordered by divisibility, then the implementation of `GCD` above gives the greatest lower bound of $a$ and $b$, so `LCM` should return the leastu upper bound of $a$ and $b$. Under this interpretation, because $0$ is the maximal element in #\\mathbb{N}$ partially ordered by inclusion, the `LCM(a,0) = 0` should hold for all `a`. This agrees with the definition given by $LCM(a,b) = a \\cdot b/GCD(a,b)$ "
+        "1. We can improve the `is_prime` function by only checking $n$ for factors between 1 and $\\sqrt{n}$, because if $n$ had a divisor $d$ greater than $\\sqrt{n}$, then `is_prime` would have already found the smaller divisor $n/d$.\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "XLVsDlQEuXdy",
-        "outputId": "9271b18a-75d3-42d9-aa39-35680d148906",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9271b18a-75d3-42d9-aa39-35680d148906"
       },
       "source": [
         "#1\n",
@@ -2373,6 +2434,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W-_prJU1Iluf"
+      },
+      "source": [
+        "2. It is always possible for the Euclidean algorithm to terminate after a small number of steps. For example, if one of the inputs is a multiple of the other, than the Euclidean algorithm will terminate after just one step, regardless of the actual sizes of the inputs. After testing different values for $a$ and $b$, it appears that the worst case scenario is if $a$ and $b$ are consecutive Fibonacci numbers, and it can probably be proved by induction that if $b < a$ and $b < F_n$, where $F_n$ is the $n$th Fibonacci number, then the Euclidean algorithm terminates after at most $n$ steps."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "M02OsBxk-xWv",
@@ -2382,6 +2452,7 @@
         "outputId": "8a12eb1d-fd94-4cce-c021-fac6f569a814"
       },
       "source": [
+        "#2\n",
         "def Euclidean_algorithm_steps(a,b):\n",
         "    dividend = a\n",
         "    divisor = b\n",
@@ -2407,34 +2478,99 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "Ly7JDM7u_0AD",
-        "outputId": "6f45546f-cd65-4464-c0ed-550d436eae2a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "lVk5j5xLIpoZ"
       },
       "source": [
+        "3. If we consider the natural numbers partially ordered by divisibility, then the implementation of `GCD` above gives the greatest lower bound of $a$ and $b$, so `LCM` should return the least upper bound of $a$ and $b$. Under this interpretation, because $0$ is the maximal element in $\\mathbb{N}$ partially ordered by inclusion, the `LCM(a,0) = 0` should hold for all `a`. This agrees with the definition given by $LCM(a,b) = (a \\cdot b)/GCD(a,b)$ except in the case where $ a = b = 0$, because we end up dividing 0 by 0, so we need to manually return $0$ in that case."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ly7JDM7u_0AD",
+        "outputId": "09504276-801f-4cea-8e66-f71b30e12a42"
+      },
+      "source": [
+        "#3\n",
         "def GCD(a,b):\n",
         "    while b:   # I.e., while b != 0.\n",
         "        a, b = b, a % b\n",
         "    return abs(a)\n",
         "\n",
         "def LCM(a,b):\n",
-        "  return a*b//GCD(a,b)"
+        "  if a == 0 and b == 0:\n",
+        "    return 0\n",
+        "  return a*b//GCD(a,b)\n",
+        "\n",
+        "print(LCM(10,14))\n",
+        "print(LCM(0,10))\n",
+        "print(LCM(0,0))"
       ],
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "132\n",
+            "70\n",
             "0\n",
-            "10\n"
+            "0\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d16RZJCZIttx"
+      },
+      "source": [
+        "\n",
+        "4. As mentioned in the previous question, `GCD(a,b)` computes the greatest lower bound of $a$ and $b$ when $a,b \\in \\mathbb{N}$ ordered by divisibility, so $GCD(a,0) = a$ holds for all $a \\in \\mathbb{N}$. If $a$ or $b$ is negative, the output is the same as if we replaced $a$ by $|a|$, and $b$ by $|b|$. This makes sense, because if $d$ is a common divisor of $a$ and $b$, then so is $-d$, so because we always want the greatest common divisor, the signs can be safely ignored."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uZfNbCz-Gkxz",
+        "outputId": "e84645d8-9b08-4ad3-d7f6-dc6ce89a1cb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#4\n",
+        "print(GCD(0,10))\n",
+        "print(GCD(0,0))\n",
+        "print(GCD(10,-5))\n",
+        "print(GCD(-5,10))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "0\n",
+            "5\n",
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dYfMa-SqIyYs"
+      },
+      "source": [
+        "5. Using Taylor's theorem, we know that if we truncate the series for $e$ after $\\frac{1}{k!}$, then the error is equal to $\\frac{e^\\xi}{(k+1)!}$ for some $\\xi \\in (0,1)$. Then, because $e^\\xi < 3$ for $\\xi \\in (0,1)$, if 3 times the next term in the series is less than $10^{-n}$, then we can truncate the series there and guarantee that our estimate is within $10^{-n}$."
       ]
     },
     {
@@ -2444,36 +2580,31 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25a8c587-02ff-4169-fa0a-6450d5062682"
+        "outputId": "67676425-74e1-41d6-9c13-61ad61871543"
       },
       "source": [
         "#5\n",
         "from mpmath import *\n",
         "def approximate_e(n): #approximate e to at least n digits of accuracy\n",
-        "  mp.dps = n+1\n",
+        "  mp.dps = n + 2\n",
         "  approximation = mpf(0)\n",
         "  term = 0\n",
         "  addend = mpf(1)\n",
-        "  while addend > 10**(-n-1):\n",
+        "  while 3*addend > 10**(-n):\n",
         "    approximation = approximation + addend\n",
         "    term = term + 1 \n",
         "    addend = addend/term\n",
-        "  print(term)\n",
-        "  print(addend)\n",
-        "  print(approximation)\n",
-        "approximate_e(80)\n",
+        "  return approximation\n",
+        "print(approximate_e(30))\n",
         "\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "60\n",
-            "1.20178049364932267021937386416586257652800811579212837697174634066971427198892163e-82\n",
-            "2.7182818284590452353602874713526624977572470936999595749669676277240766303535476\n",
-            "79\n"
+            "2.7182818284590452353602874713526\n"
           ],
           "name": "stdout"
         }
