--- a/P4M_Notebook2.ipynb
+++ b/P4M_Notebook2.ipynb
@@ -585,7 +585,8 @@
         "id": "myK_9kRIICJo"
       },
       "source": [
-        "2 . See below."
+        "2 . See below.\n",
+        "\n"
       ]
     },
     {
@@ -635,7 +636,7 @@
         "id": "6eh7EpTaIFfK"
       },
       "source": [
-        "3. See below."
+        "3 . See below."
       ]
     },
     {
@@ -673,7 +674,7 @@
         "id": "2ivDpmFGIL8W"
       },
       "source": [
-        "4. `s.replace(a,b)` runs through the string `s`, and replaces instances of the substring `a` with `b`."
+        "4 . `s.replace(a,b)` runs through the string `s`, and replaces instances of the substring `a` with `b`."
       ]
     },
     {
@@ -715,7 +716,7 @@
         "id": "53idVklHIP0y"
       },
       "source": [
-        "5. `%` formats a number as a percent, so a floating point number `f` is multiplied by 100 and then a % sign is added at the end. `E` formats a number in scientific notation, so `f` is written as a number between 1 and 10, multiplied by an appropriate power of 10."
+        "5 . `%` formats a number as a percent, so a floating point number `f` is multiplied by 100 and then a % sign is added at the end. `E` formats a number in scientific notation, so `f` is written as a number between 1 and 10, multiplied by an appropriate power of 10."
       ]
     },
     {
@@ -750,7 +751,7 @@
         "id": "XVoFJQhqIVJD"
       },
       "source": [
-        "6. A function might have a non-deterministic output, such as a function that generates a random number between 0 and 1, which would not need any input. Also, if you have a piece of code that is repeated in several places, it might be helpful to define a function to make it more readable."
+        "6 . A function might have a non-deterministic output, such as a function that generates a random number between 0 and 1, which would not need any input. Also, if you have a piece of code that is repeated in several places, it might be helpful to define a function to make it more readable."
       ]
     },
     {
@@ -1170,7 +1171,7 @@
         "id": "brKUIdpTIYt9"
       },
       "source": [
-        "2. See below"
+        "2 . See below"
       ]
     },
     {
@@ -1225,7 +1226,7 @@
         "id": "Ir69e99qIa2f"
       },
       "source": [
-        "3. See below"
+        "3 . See below"
       ]
     },
     {
@@ -1269,7 +1270,7 @@
         "id": "DDqIjx6oIdN_"
       },
       "source": [
-        "4. I know from algebra that a positive integer $n$ can be written as the sum of two squares if and only if every prime equivalent to $3$ mod $4$ appears an even number of times in the prime factorization of $n$."
+        "4 . I know from algebra that a positive integer $n$ can be written as the sum of two squares if and only if every prime equivalent to $3$ mod $4$ appears an even number of times in the prime factorization of $n$."
       ]
     },
     {
@@ -1329,7 +1330,7 @@
         "id": "JFStjfv9IgEB"
       },
       "source": [
-        "5. It appears that you need $n \\approx 1000000$ to get 5 digits of precision on this limit. We can show that $\\gamma(n)$ is a decreasing sequence that is bounded below, so it converges by the monotone sequence theorem.\n"
+        "5 . It appears that you need $n \\approx 1000000$ to get 5 digits of precision on this limit. We can show that $\\gamma(n)$ is a decreasing sequence that is bounded below, so it converges by the monotone sequence theorem.\n"
       ]
     },
     {
@@ -1789,9 +1790,7 @@
       "source": [
         "### Solutions\n",
         "\n",
-        "1. `ZeroDivisionError` occurs when Python tries to divide by zero. You might want to raise this exception yourself if you are dividing by a small quantity which you don't know exactly, so it might actually be zero.\n",
-        "\n",
-        "2. See below"
+        "1. `ZeroDivisionError` occurs when Python tries to divide by zero. You might want to raise this exception yourself if you are dividing by a small quantity which you don't know exactly, so it might actually be zero."
       ]
     },
     {
@@ -1821,6 +1820,15 @@
             "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EQtVmim8WjlV"
+      },
+      "source": [
+        "2 . See below"
       ]
     },
     {
@@ -2438,7 +2446,7 @@
         "id": "W-_prJU1Iluf"
       },
       "source": [
-        "2. It is always possible for the Euclidean algorithm to terminate after a small number of steps. For example, if one of the inputs is a multiple of the other, than the Euclidean algorithm will terminate after just one step, regardless of the actual sizes of the inputs. After testing different values for $a$ and $b$, it appears that the worst case scenario is if $a$ and $b$ are consecutive Fibonacci numbers, and it can probably be proved by induction that if $b < a$ and $b < F_n$, where $F_n$ is the $n$th Fibonacci number, then the Euclidean algorithm terminates after at most $n$ steps."
+        "2 . It is always possible for the Euclidean algorithm to terminate after a small number of steps. For example, if one of the inputs is a multiple of the other, than the Euclidean algorithm will terminate after just one step, regardless of the actual sizes of the inputs. After testing different values for $a$ and $b$, it appears that the worst case scenario is if $a$ and $b$ are consecutive Fibonacci numbers, and it can probably be proved by induction that if $b < a$ and $b < F_n$, where $F_n$ is the $n$th Fibonacci number, then the Euclidean algorithm terminates after at most $n$ steps."
       ]
     },
     {
@@ -2482,7 +2490,7 @@
         "id": "lVk5j5xLIpoZ"
       },
       "source": [
-        "3. If we consider the natural numbers partially ordered by divisibility, then the implementation of `GCD` above gives the greatest lower bound of $a$ and $b$, so `LCM` should return the least upper bound of $a$ and $b$. Under this interpretation, because $0$ is the maximal element in $\\mathbb{N}$ partially ordered by inclusion, the `LCM(a,0) = 0` should hold for all `a`. This agrees with the definition given by $LCM(a,b) = (a \\cdot b)/GCD(a,b)$ except in the case where $ a = b = 0$, because we end up dividing 0 by 0, so we need to manually return $0$ in that case."
+        "3 . If we consider the natural numbers partially ordered by divisibility, then the implementation of `GCD` above gives the greatest lower bound of $a$ and $b$, so `LCM` should return the least upper bound of $a$ and $b$. Under this interpretation, because $0$ is the maximal element in $\\mathbb{N}$ partially ordered by inclusion, the `LCM(a,0) = 0` should hold for all `a`. This agrees with the definition given by $LCM(a,b) = (a \\cdot b)/GCD(a,b)$ except in the case where $ a = b = 0$, because we end up dividing 0 by 0, so we need to manually return $0$ in that case."
       ]
     },
     {
@@ -2530,7 +2538,7 @@
       },
       "source": [
         "\n",
-        "4. As mentioned in the previous question, `GCD(a,b)` computes the greatest lower bound of $a$ and $b$ when $a,b \\in \\mathbb{N}$ ordered by divisibility, so $GCD(a,0) = a$ holds for all $a \\in \\mathbb{N}$. If $a$ or $b$ is negative, the output is the same as if we replaced $a$ by $|a|$, and $b$ by $|b|$. This makes sense, because if $d$ is a common divisor of $a$ and $b$, then so is $-d$, so because we always want the greatest common divisor, the signs can be safely ignored."
+        "4 . As mentioned in the previous question, `GCD(a,b)` computes the greatest lower bound of $a$ and $b$ when $a,b \\in \\mathbb{N}$ ordered by divisibility, so $GCD(a,0) = a$ holds for all $a \\in \\mathbb{N}$. If $a$ or $b$ is negative, the output is the same as if we replaced $a$ by $|a|$, and $b$ by $|b|$. This makes sense, because if $d$ is a common divisor of $a$ and $b$, then so is $-d$, so because we always want the greatest common divisor, the signs can be safely ignored."
       ]
     },
     {
@@ -2569,7 +2577,7 @@
         "id": "dYfMa-SqIyYs"
       },
       "source": [
-        "5. Using Taylor's theorem, we know that if we truncate the series for $e$ after $\\frac{1}{k!}$, then the error is equal to $\\frac{e^\\xi}{(k+1)!}$ for some $\\xi \\in (0,1)$. Then, because $e^\\xi < 3$ for $\\xi \\in (0,1)$, if 3 times the next term in the series is less than $10^{-n}$, then we can truncate the series there and guarantee that our estimate is within $10^{-n}$."
+        "5 . Using Taylor's theorem, we know that if we truncate the series for $e$ after $\\frac{1}{k!}$, then the error is equal to $\\frac{e^\\xi}{(k+1)!}$ for some $\\xi \\in (0,1)$. Then, because $e^\\xi < 3$ for $\\xi \\in (0,1)$, if 3 times the next term in the series is less than $10^{-n}$, then we can truncate the series there and guarantee that our estimate is within $10^{-n}$."
       ]
     },
     {
