--- a/Eric_Collatz.ipynb
+++ b/Eric_Collatz.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Eric Collatz",
       "provenance": [],
-      "authorship_tag": "ABX9TyOz48a+Vof1MLp+T7QwQpZ/",
+      "authorship_tag": "ABX9TyOS8YfjnTLcjf0JRljr7Kar",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,8 +30,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "xxXkR-D-XbCe",
-        "outputId": "e5745f81-a74e-4c4c-8850-e94bdef2350a"
+        "id": "Q1oDzIMuRetR",
+        "outputId": "493b64f5-9bb1-43dc-9073-2b617cd47e2e"
       },
       "source": [
         "def modified_collatz(n, behavior, iterations): #behavior is a list of 2-tuples\n",
@@ -40,146 +40,28 @@
         "    print(n)\n",
         "    rem = n%arity\n",
         "    n = int(behavior[rem][0]*n + behavior[rem][1])\n",
-        "behavior_list = [(.5,-1),(3,1)]\n",
-        "modified_collatz(9,behavior_list,100)"
-      ],
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "9\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n",
-            "58\n",
-            "28\n",
-            "13\n",
-            "40\n",
-            "19\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Q1oDzIMuRetR",
-        "outputId": "72545fbf-4ac7-4782-cb01-90dc503a2551"
-      },
-      "source": [
-        "def modified_collatz_loop_finder(n): #assumes input is odd integer\n",
-        "  tracker = 3*n - 1\n",
+        "\n",
+        "def update(n,behavior):\n",
+        "  arity = len(behavior)\n",
+        "  rem = n%arity\n",
+        "  return int(behavior[rem][0]*n + behavior[rem][1])\n",
+        "\n",
+        "def modified_collatz_loop_finder(n,behavior):\n",
+        "  tracker = update(n,behavior)\n",
         "  elements = [n,tracker]\n",
         "  while tracker > n:\n",
-        "    if tracker%2 == 0:\n",
-        "      tracker = tracker//2\n",
-        "    else:\n",
-        "      tracker = 3*tracker - 1\n",
+        "    tracker = update(tracker,behavior)\n",
         "    elements.append(tracker)\n",
         "  if tracker == n:\n",
         "    print(elements)\n",
-        "for i in range(1,100000000,2):\n",
-        "  modified_collatz_loop_finder(i)\n",
+        "\n",
+        "behavior_list = [(.5,0),(3,-1)]\n",
+        "for i in range(1,10000):\n",
+        "  modified_collatz_loop_finder(i,behavior_list)\n",
         "\n",
         "  \n"
       ],
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,7 +108,7 @@
         "\n",
         "    "
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
