--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -86,7 +86,7 @@
         "            return False\n",
         "    return True"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
         "        j = j + 1  # There's a Python abbreviation for this:  j += 1.\n",
         "    return True"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -127,12 +127,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f53c9f5-20bd-4c74-c94d-2fce5f898240"
+        "outputId": "b0c1c300-8db9-418c-8f09-cfddca8241ca"
       },
       "source": [
         "is_prime(10001)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
     },
@@ -162,12 +162,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fac902de-9493-4677-92d3-22517e57b2d3"
+        "outputId": "ca3760d4-8618-4d27-dc76-3bc8b7d2f50f"
       },
       "source": [
         "is_prime(101)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,7 +179,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 6
         }
       ]
     },
@@ -209,7 +209,7 @@
       "source": [
         "from math import sqrt"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -228,12 +228,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "57589fe8-ecb5-4447-b785-176b493b9186"
+        "outputId": "65362ab5-3b40-47f6-cb08-53a324fa2cd2"
       },
       "source": [
         "sqrt(1000)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +245,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     },
@@ -274,7 +274,7 @@
       "source": [
         "import math"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -284,12 +284,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c9d08d5c-c0dc-4b29-f1f5-55490f0f5b0b"
+        "outputId": "1decde68-ccaa-4bb1-b5df-920925a84068"
       },
       "source": [
         "math.sqrt(1000)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,7 +301,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 10
         }
       ]
     },
@@ -313,12 +313,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 164
         },
-        "outputId": "2bbde983-e92f-455a-f322-fb6cd9b4d3ea"
+        "outputId": "56421b94-f363-45b8-9629-e250adedd53b"
       },
       "source": [
         "factorial(10)  # This will cause an error!"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "error",
@@ -327,7 +327,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-9-e379444d4994>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfactorial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# This will cause an error!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-11-e379444d4994>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfactorial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# This will cause an error!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m: name 'factorial' is not defined"
           ]
         }
@@ -340,12 +340,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fc3cd76f-992e-4075-bf30-1b8609b329d7"
+        "outputId": "a7d7ff98-f081-41e7-e7f6-29a749520747"
       },
       "source": [
         "math.factorial(10)  # This is ok, since the math package comes with a function called factorial."
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -357,7 +357,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 12
         }
       ]
     },
@@ -389,7 +389,7 @@
         "        j = j + 1  # There's a Python abbreviation for this:  j += 1.\n",
         "    return True"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -412,7 +412,7 @@
         "        j = j + 1  # There's a Python abbreviation for this:  j += 1.\n",
         "    return True"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -422,12 +422,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c3eaaf5c-6dd9-46a3-d1cb-ae9f47b2a65a"
+        "outputId": "f1ee1a6f-031b-4f8c-8bc0-f4c33d721ba1"
       },
       "source": [
         "is_prime_fast(1000003)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -439,7 +439,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 15
         }
       ]
     },
@@ -450,12 +450,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d7d56acd-f860-4e5d-f336-b9b692239a30"
+        "outputId": "340e1ac5-1bd3-43e5-8e73-6c27fe1c1d50"
       },
       "source": [
         "is_prime_slow(1000003)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,7 +467,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 16
         }
       ]
     },
@@ -495,12 +495,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "704d8d1e-45c9-4888-b5ac-6b06c0c9ac83"
+        "outputId": "2dfdf195-1ee8-4150-ffc4-854ad3008086"
       },
       "source": [
         "%timeit is_prime_fast(1000003)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,18 +518,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0bdafc4b-85b0-46fb-cb80-f393c0024bd2"
+        "outputId": "6c187d95-6758-488c-a420-3b6f56cb99b3"
       },
       "source": [
         "%timeit is_prime_slow(1000003)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The slowest run took 5.23 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-            "10000 loops, best of 3: 158 µs per loop\n"
+            "10000 loops, best of 3: 152 µs per loop\n"
           ],
           "name": "stdout"
         }
@@ -542,17 +541,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6b9a083e-da33-4ea8-e980-e6d97e1fa950"
+        "outputId": "8c1b3dac-8a77-4e05-9ae1-2aa54a44e276"
       },
       "source": [
         "%timeit is_prime(1000003)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "10 loops, best of 3: 101 ms per loop\n"
+            "10 loops, best of 3: 99.1 ms per loop\n"
           ],
           "name": "stdout"
         }
@@ -574,12 +573,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d300fc0-8f84-40ee-d9db-451f76d117ae"
+        "outputId": "bb82d9c9-4d62-4bd6-b49b-6a4d289c10a6"
       },
       "source": [
         "is_prime_fast(10000000000037)  # Don't try this with `is_prime` unless you want to wait for a long time!"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +590,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 20
         }
       ]
     },
@@ -620,7 +619,7 @@
       "source": [
         "from dis import dis"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -755,12 +754,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "291dc2ed-17dc-4ecc-c08f-9fd6f86b79aa"
+        "outputId": "3a483a1f-dfa8-4188-d134-452a2550f09d"
       },
       "source": [
         "is_prime_fast(10**14 + 37) # This might get a bit of delay."
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -808,13 +807,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nUwBXDcPA4uN"
+      },
+      "source": [
+        "1 . Only checking the odd factors makes the function twice as fast, which makes a lot of sense, because we only check half as many numbers."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8F134PSI_OZy",
-        "outputId": "fd1337db-1014-41ac-fc49-35a4e352644d"
+        "outputId": "01a81b2c-2405-4e3a-e8f3-849e56481c7e"
       },
       "source": [
         "#1\n",
@@ -835,13 +843,161 @@
         "%timeit is_prime_fast(1000003)\n",
         "%timeit is_prime_even_faster(1000003)"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "10000 loops, best of 3: 114 µs per loop\n",
-            "10000 loops, best of 3: 57.3 µs per loop\n"
+            "10000 loops, best of 3: 112 µs per loop\n",
+            "10000 loops, best of 3: 57 µs per loop\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "80tUk9DvIQcj"
+      },
+      "source": [
+        "2 . As `is_prime_fast` checks all numbers in the range $(2,\\sqrt{n})$, we expect the time taken to `is_prime_fast` to be proportional to $\\sqrt{n}$ in the worst case i.e. when $n$ is prime. We can see below that for large prime $n$'s, increasing $n$ by about a factor of 10 increases the time taken by about $\\sqrt{10} \\approx 3.16$. We numerically estimate that `is_prime_fast(n)` takes about $162 \\cdot \\sqrt{n} $ ns when $n$ is a large prime."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oBKE_0jSBGZk",
+        "outputId": "e6783ee7-c038-4594-bc11-198ccbe411f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#2\n",
+        "prime_list = [2,11,101,1009,10**4 + 7, 10**5 + 3, 10**6 + 3, 10**7 + 19, 10**8 + 7, 10**9 + 7, 10**10 + 19, 10**11 + 3,10**12 + 39] #precomputed list of primes, nth is the first prime above 10**n\n",
+        "for p in prime_list:\n",
+        "  print('testing ', p)\n",
+        "  print('estimated around {} ns'.format(int(162*sqrt(p))))\n",
+        "  %timeit is_prime_fast(p)"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "around 229 ns\n",
+            "The slowest run took 25.98 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "10000000 loops, best of 3: 164 ns per loop\n",
+            "11\n",
+            "around 537 ns\n",
+            "The slowest run took 8.58 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "1000000 loops, best of 3: 341 ns per loop\n",
+            "101\n",
+            "around 1628 ns\n",
+            "1000000 loops, best of 3: 1.01 µs per loop\n",
+            "1009\n",
+            "around 5145 ns\n",
+            "100000 loops, best of 3: 2.92 µs per loop\n",
+            "10007\n",
+            "around 16205 ns\n",
+            "100000 loops, best of 3: 9.34 µs per loop\n",
+            "100003\n",
+            "around 51229 ns\n",
+            "10000 loops, best of 3: 29.6 µs per loop\n",
+            "1000003\n",
+            "around 162000 ns\n",
+            "10000 loops, best of 3: 110 µs per loop\n",
+            "10000019\n",
+            "around 512289 ns\n",
+            "1000 loops, best of 3: 371 µs per loop\n",
+            "100000007\n",
+            "around 1620000 ns\n",
+            "1000 loops, best of 3: 1.17 ms per loop\n",
+            "1000000007\n",
+            "around 5122889 ns\n",
+            "100 loops, best of 3: 3.73 ms per loop\n",
+            "10000000019\n",
+            "around 16200000 ns\n",
+            "100 loops, best of 3: 15.9 ms per loop\n",
+            "100000000003\n",
+            "around 51228898 ns\n",
+            "10 loops, best of 3: 50.7 ms per loop\n",
+            "1000000000039\n",
+            "around 162000000 ns\n",
+            "10 loops, best of 3: 160 ms per loop\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e0gWaC_kDje2",
+        "outputId": "8a6c93a0-d652-4b35-fa1b-1b35a918183e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#3\n",
+        "from math import sqrt\n",
+        "\n",
+        "def is_square_one(n):\n",
+        "  if sqrt(n) == int(sqrt(n)):\n",
+        "    return True\n",
+        "  return False\n",
+        "\n",
+        "def is_square_two(n):\n",
+        "  i = 0\n",
+        "  while i**2 < n:\n",
+        "    i = i + 1\n",
+        "  if i**2 == n:\n",
+        "    return True\n",
+        "  return False\n",
+        "\n",
+        "def is_square_three(n):\n",
+        "  if n%4 == 2 or n%4 == 3:\n",
+        "    return False\n",
+        "  if n%4 == 0:\n",
+        "    i = 0\n",
+        "    while i**2 < n:\n",
+        "      i = i + 2\n",
+        "    if i**2 == n:\n",
+        "      return True\n",
+        "    return False\n",
+        "  else:\n",
+        "    i = 1\n",
+        "    while i**2 < n:\n",
+        "      i = i + 2\n",
+        "    if i**2 == n:\n",
+        "      return True\n",
+        "    return False\n",
+        "\n",
+        "%timeit is_square_one(10**10+1)\n",
+        "%timeit is_square_two(10**10+1)\n",
+        "%timeit is_square_three(10**10+1)\n",
+        "\n",
+        "%timeit is_square_one(10**10+3)\n",
+        "%timeit is_square_two(10**10+3)\n",
+        "%timeit is_square_three(10**10+3)"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The slowest run took 11.49 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "1000000 loops, best of 3: 374 ns per loop\n",
+            "10 loops, best of 3: 27.2 ms per loop\n",
+            "100 loops, best of 3: 13.7 ms per loop\n",
+            "The slowest run took 13.25 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "1000000 loops, best of 3: 376 ns per loop\n",
+            "10 loops, best of 3: 27.2 ms per loop\n",
+            "The slowest run took 12.20 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "1000000 loops, best of 3: 215 ns per loop\n"
           ],
           "name": "stdout"
         }
